# Depression-Detection-using-Multi-modal-analysis

mental_health_assessment_app/: INSTALLATION.md  README.md  app.py  depression_predictor.py  project_requirements.txt  pyproject.toml  replit.md  text_analyzer.py  utils.py  voice_analyzer_simple.py
sample_voice_inputs/: happy.m4a  happy2.m4a
