[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.46.1",
    "plotly>=5.0.0",
    "pandas>=1.3.0",
    "nltk>=3.8",
    "spacy>=3.4.0",
    "textblob>=0.17.0",
    "numpy>=1.21.0",
    "streamlit-webrtc>=0.47.0",
    "pydub>=0.25.0",
]
